# RaBitQ

./: .gitignore  CMakeLists.txt  command.txt  run.py
data/: ivf.py  rabitq.py
script/: index.sh  index_batch.py  search.sh  search_batch.py
src/: index.cpp  search.cpp
